[gd_scene load_steps=3 format=2]

[ext_resource path="res://Pickup2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.3917, 32 )

[node name="Pickup2" type="Area2D" groups=["pickups"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.244125, 0 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="Pickup2RemoveTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Pickup2_area_entered"]
[connection signal="timeout" from="Pickup2RemoveTimer" to="." method="_on_Pickup2RemoveTimer_timeout"]
